ios platform added. and other pushes

--- a/simple-todos/simple-todos.html
+++ b/simple-todos/simple-todos.html
@@ -5,12 +5,13 @@
 <body>
     <div class="container">
       <header>
-        <h1>Mileini's Awesome Todo List</h1>
+        <h1>Mileini's Awesome-o Todo List</h1>
 
         <form class="new-task">
           <input type="text" name="text" placeholder="Type to add new tasks" />
         </form>
       </header>
+
       <ul>
       {{#each tasks}}
         {{> task}}
