--- a/logistics/services.html
+++ b/logistics/services.html
@@ -19,45 +19,65 @@
 				<li>
 					<a href="about.html">About</a>
 				</li>
-				<li>
+				<li class="selected">
 					<a href="services.html">Services</a>
 				</li>
-				<li class="selected">
+				<li>
 					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<div id="about" class="area" style="width: 990px;">
+		<div id="about" class="area">
 			<div class="section">
 				<div class="box">
 					<div>
 						<div>
-							<h3>Contact Us</h3><br>
-							<p>
-								Inter Custom Logistics<br>
-								6815 NW 84th Ave.<br>
-								Miami, FL 33166<br>
-								Ph: (305) 718-8190<br>
-								Fx: (305) 718-9877<br>
-
-								Email:
-								<a href="mailto:gladysp@intercustom.com" class="versm"><strong>gladysp@intercustom.com</h4></strong></a>
-							</p>
+							<table>
+								<tr>
+									<h2>Servies</h2>
+								</tr>
+								<tr>
+									<td>
+										<a href="airexports.html">
+											<img src="images/plane.png" alt="Img" height="120" width="120" />
+										</a>
+										<h4><a href="airexports.html">Air Export</a></h4>
+									</td>
+									<td>
+										<a href="airimports.html">
+											<img src="images/plane.jpg" alt="Img" height="120" width="120" />
+										</a>
+										<h4><a href="airimports.html">Air Imports</a></h4>
+									</td>
+									<td>
+										<a href="customsbrokerage.html">
+											<img src="images/customs.jpg" alt="Img" height="120" width="120" />
+										</a>
+										<h4><a href="customsbrokerage.html">Customs Brokerage</a></h4>
+									</td>
+								</tr>
+							</table>
+							<table>
+								<tr>
+									<td style="padding-right: 26px;padding-left: 63px;">
+										<a href="oceanexports.html">
+											<img src="images/ocean.jpg" alt="Img" height="120" width="120" />
+										</a>
+										<h4><a href="oceanexports.html">Ocean Exports</a></h4>
+									</td>
+									<td>
+										<a href="oceanimports.html">
+											<img src="images/ocean2.jpg" alt="Img" height="120" width="120" />
+										</a>
+										<h4><a href="oceanimports.html">Ocean Imports</a></h4>
+									</td>
+								</tr>
+							</table>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div>
-				<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="510" height="383" src="https://maps.google.com/maps?hl=en&q=6815 NW 84th Ave 33166&ie=UTF8&t=roadmap&z=13&iwloc=B&output=embed">
-					<div><small>
-						<a href="http://embedgooglemaps.com">embedgooglemaps.com</a></small>
-					</div>
-					<div>
-						<small><a href="http://www.premiumlinkgenerator.com/">premiumlinkgenerator.com</a></small>
-					</div>
-				</iframe>
 			</div>
 		</div>
 	</div>
