--- a/logistics/about.html
+++ b/logistics/about.html
@@ -19,7 +19,7 @@
 					<a href="about.html">About</a>
 				</li>
 				<li>
-					<a href="blog.html">Blog</a>
+					<a href="services.html">Services</a>
 				</li>
 				<li>
 					<a href="contact.html">Contact</a>
@@ -27,7 +27,7 @@
 			</ul>
 		</div>
 	</div>
-	<div id="contents">
+	<div id="contents" style="min-height: 490px;">
 		<div id="about" class="area">
 			<div class="section">
 				<div class="box">
@@ -77,7 +77,7 @@
 		<span class="divider"></span>
 		<div class="area">
 			<div id="connect">
-				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
+				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
 			</div>
 			<p>
 				© 2023 AZ Logistics. All Rights Reserved.
