--- a/logistics/index.html
+++ b/logistics/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Logistics Website Template</title>
+	<title>Inter Custom Logistics</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
@@ -20,7 +20,7 @@
 					<a href="about.html">About</a>
 				</li>
 				<li>
-					<a href="blog.html">Blog</a>
+					<a href="services.html">Services</a>
 				</li>
 				<li>
 					<a href="contact.html">Contact</a>
@@ -115,7 +115,7 @@
 		<span class="divider"></span>
 		<div class="area">
 			<div id="connect">
-				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
+				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
 			</div>
 			<p>
 				© 2023 AZ Logistics. All Rights Reserved.
