--- a/logistics/about.html
+++ b/logistics/about.html
@@ -11,6 +11,8 @@
 			<div id="logo">
 				<a href="index.html"><img src="images/logo.png" alt="LOGO" height="86" width="170" /></a>
 			</div>
+			<div id="logo-text">INTER CUSTOMS LOGISTICS
+			</div>
 			<ul id="navigation">
 				<li>
 					<a href="index.html">Home</a>
