--- a/logistics/about.html
+++ b/logistics/about.html
@@ -9,7 +9,7 @@
 	<div id="header">
 		<div class="area">
 			<div id="logo">
-				<a href="index.html"><img src="images/logo.png" alt="LOGO" height="86" width="170" /></a>
+				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
 			</div>
 			<div id="logo-text">INTER CUSTOMS LOGISTICS
 			</div>
