--- a/logistics/airexports.html
+++ b/logistics/airexports.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-<!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -18,48 +17,56 @@
 				<li>
 					<a href="index.html">Home</a>
 				</li>
-				<li>
+			  <li>
 					<a href="about.html">About</a>
 				</li>
-				<li>
+				<li class="selected">
 					<a href="services.html">Services</a>
 				</li>
-				<li class="selected">
+				<li>
 					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<div id="about" class="area" style="width: 990px;">
+		<div id="about" class="area">
 			<div class="section">
 				<div class="box">
 					<div>
 						<div>
-							<h3>Contact Us</h3><br>
+							<h3>Air Exports</h3>
 							<p>
-								Inter Custom Logistics<br>
-								6815 NW 84th Ave.<br>
-								Miami, FL 33166<br>
-								Ph: (305) 718-8190<br>
-								Fx: (305) 718-9877<br>
-
-								Email:
-								<a href="mailto:gladysp@intercustom.com" class="versm"><strong>gladysp@intercustom.com</h4></strong></a>
+								Our customer service oriented Air Export department arranges complete domestic transportation services from anywhere within the USA to meet any and all scheduled airlines serving worldwide destinations.
+							<br><br>
+								The quick and efficient delivery of cargo from the exporter’s door to the airport of departure is critical to your success, and it is one of our strengths.
+							<br><br>
+								Our agent network and their knowledge of the import requirements at international destinations enables us to avoid the problems and delays that plague many "hot" air export shipments.
 							</p>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div>
-				<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="510" height="383" src="https://maps.google.com/maps?hl=en&q=6815 NW 84th Ave 33166&ie=UTF8&t=roadmap&z=13&iwloc=B&output=embed">
-					<div><small>
-						<a href="http://embedgooglemaps.com">embedgooglemaps.com</a></small>
-					</div>
+			<div class="section">
+				<div class="box">
 					<div>
-						<small><a href="http://www.premiumlinkgenerator.com/">premiumlinkgenerator.com</a></small>
+						<div>
+							<h3>Services</h3>
+								<ul style="list-style-type:disc">
+									<li>Coordination of USA inland freight </li>
+	                <li>Multiple supplier consolidations</li>
+	                <li>Packaging/Crating </li>
+	                <li>Experienced handling of restricted articles</li>
+	                <li>Letter of Credit processing </li>
+	                <li>Complete documentation </li>
+	                <li>Air Freight Options</li>
+		              <li>Direct vs. consolidated</li>
+                	<li>Speed vs. economy</li>
+	                <li>Insurance <br>
+								</ul>
+						</div>
 					</div>
-				</iframe>
+				</div>
 			</div>
 		</div>
 	</div>
