--- a/logistics/airimports.html
+++ b/logistics/airimports.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-<!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -21,45 +20,49 @@
 				<li>
 					<a href="about.html">About</a>
 				</li>
-				<li>
+				<li class="selected">
 					<a href="services.html">Services</a>
 				</li>
-				<li class="selected">
+				<li>
 					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<div id="about" class="area" style="width: 990px;">
+		<div id="about" class="area">
 			<div class="section">
 				<div class="box">
 					<div>
 						<div>
-							<h3>Contact Us</h3><br>
+							<h3>Air Imports</h3>
 							<p>
-								Inter Custom Logistics<br>
-								6815 NW 84th Ave.<br>
-								Miami, FL 33166<br>
-								Ph: (305) 718-8190<br>
-								Fx: (305) 718-9877<br>
-
-								Email:
-								<a href="mailto:gladysp@intercustom.com" class="versm"><strong>gladysp@intercustom.com</h4></strong></a>
+								Working with our global network of partners/affiliates, we coordinate both urgent and price sensitive cargo moving via air into the USA.
+							<br><br>
+								Our overseas partners are chosen based on their ability to respond, communicate and negotiate so our clients can receive and distribute their products quickly and economically.
 							</p>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div>
-				<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="510" height="383" src="https://maps.google.com/maps?hl=en&q=6815 NW 84th Ave 33166&ie=UTF8&t=roadmap&z=13&iwloc=B&output=embed">
-					<div><small>
-						<a href="http://embedgooglemaps.com">embedgooglemaps.com</a></small>
-					</div>
+			<div class="section">
+				<div class="box">
 					<div>
-						<small><a href="http://www.premiumlinkgenerator.com/">premiumlinkgenerator.com</a></small>
+						<div>
+							<h3>Services</h3>
+								<ul style="list-style-type:disc">
+									<li> Product Sourcing
+	                  </li>
+	                <li>Buyer&rsquo;s Consolidations</li>
+	                <li>P.O. Monitoring</li>
+	                <li> Air Transportation Options </li>
+	                <li> IFS Tracker</li>
+	                <li> Customs Clearance 24/7</li>
+	                <li> Warehousing / Distribution at Destination</li>
+								</ul>
+						</div>
 					</div>
-				</iframe>
+				</div>
 			</div>
 		</div>
 	</div>
