--- a/logistics/index.html
+++ b/logistics/index.html
@@ -33,40 +33,40 @@
 	<div id="contents">
 		<div id="adbox">
 			<div class="area">
-				<ul>
-					<li>
-						<div>
-							<h2><span>LAND</span> TRANSPORT</h2>
-							<p>
-								This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>
-							</p>
-						</div>
-					</li>
-					<li>
-						<div>
-							<h2><span>Ocean</span> TRANSPORT</h2>
-							<p>
-								This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>
-							</p>
-						</div>
-					</li>
-					<li>
-						<div>
-							<h2><span>Air</span> TRANSPORT</h2>
-							<p>
-								This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>
-							</p>
-						</div>
-					</li>
-				</ul>
 			</div>
 		</div>
 		<div class="area">
 			<div class="main">
-				<h2>FREE WEBSITE TEMPLATES</h2>
-				<p>
-					This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forum</a>.
-				</p>
+				<div id="adbox2">
+					<div class="area">
+						<ul>
+							<li>
+								<div>
+									<h2><span>LAND</span> TRANSPORT</h2>
+									<p>
+										This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>
+									</p>
+								</div>
+							</li>
+							<li>
+								<div>
+									<h2><span>Ocean</span> TRANSPORT</h2>
+									<p>
+										This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>
+									</p>
+								</div>
+							</li>
+							<li>
+								<div>
+									<h2><span>Air</span> TRANSPORT</h2>
+									<p>
+										This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>
+									</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
 				<div id="features">
 					<h2>Why Choose Us</h2>
 					<ul>
