--- a/logistics/about.html
+++ b/logistics/about.html
@@ -30,7 +30,12 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<div id="about" class="area">
+		<a href="quote.html">
+			<div id="about" class="area">
+			<div class="quote">
+				<h2>Get Free Quote</h2>
+			</div>
+		</a>
 			<div class="section">
 				<div class="box">
 					<div>
