--- a/logistics/contact.html
+++ b/logistics/contact.html
@@ -32,6 +32,9 @@
 	</div>
 	<div id="contents" style="min-height: 490px;">
 		<div id="about" class="area" style="width: 990px;">
+			<div class="quote">
+				<h2>Get Free Quote</h2>
+			</div>
 			<div class="section">
 				<div class="box">
 					<div>
@@ -45,7 +48,7 @@
 								Fx: (305) 718-9877<br>
 
 								Email:
-								<a href="mailto:gladysp@intercustom.com" class="versm"><strong>gladysp@intercustom.com</h4></strong></a>
+								<a href="mailto:traffic@intercustom.com" class="versm"><strong>traffic@intercustom.com</h4></strong></a>
 							</p>
 						</div>
 					</div>
