--- a/logistics/index.html
+++ b/logistics/index.html
@@ -10,7 +10,7 @@
 	<div id="header">
 		<div class="area">
 			<div id="logo">
-				<a href="index.html"><img src="images/logo-border.png" alt="LOGO"  /></a>
+				<a href="index.html"><img src="images/logo-border.png" alt="LOGO"/></a>
 			</div>
 			<div id="logo-text">INTER CUSTOMS LOGISTICS
 			</div>
@@ -30,12 +30,18 @@
 			</ul>
 		</div>
 	</div>
-	<div id="contents">
+	<div id="contents" style="min-height: 490px;">
 		<div id="adbox">
 			<div class="area">
 			</div>
 		</div>
 		<div class="area">
+			<a href="quote.html">
+				<div class="area">
+				<div class="quote">
+					<h2>Get Free Quote</h2>
+				</div>
+			</a>
 			<div class="main">
 				<div id="adbox2">
 					<div class="area">
@@ -71,7 +77,7 @@
 					<h2>Why Choose Us</h2>
 					<ul>
 						<li>
-							<img src="images/agents.png" alt="Img" height="100" width="100" />
+							<img src="images/agents.png" alt="Img" height="100" width="100"/>
 							<h3>Easy Transactions</h3>
 							<p>
 								This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free.
@@ -102,7 +108,6 @@
 				</div>
 			</div>
 			<div class="blog">
-				<h2>Recent Blog Post</h2>
 				<div class="frame">
 					<img src="images/checker.jpg" alt="Img" height="216" width="268" />
 				</div>
