--- a/logistics/services.html
+++ b/logistics/services.html
@@ -10,7 +10,7 @@
 	<div id="header">
 		<div class="area">
 			<div id="logo">
-				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
+				<a href="index.html"><img src="images/logo-border.png" alt="LOGO"/></a>
 			</div>
 			<div id="logo-text">INTER CUSTOMS LOGISTICS
 			</div>
@@ -32,7 +32,13 @@
 	</div>
 	<div id="contents" style="min-height: 490px;">
 		<div id="about" class="area">
-			<div class="section">
+			<a href="quote.html">
+				<div id="about" class="area">
+				<div class="quote">
+					<h2>Get Free Quote</h2>
+				</div>
+			</a>
+			<div class="main">			<!-- or class="section" -->
 				<div class="box">
 					<div>
 						<div>
