--- a/logistics/airimports.html
+++ b/logistics/airimports.html
@@ -46,7 +46,7 @@
 							<h3>Air Imports</h3>
 							<p>
 								Working with our global network of partners/affiliates, we coordinate both urgent and price sensitive cargo moving via air into the USA.
-							<br><br>
+								<br><br>
 								Our overseas partners are chosen based on their ability to respond, communicate and negotiate so our clients can receive and distribute their products quickly and economically.
 							</p>
 						</div>
@@ -81,7 +81,7 @@
 				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
 			</div>
 			<p>
-				© 2023 AZ Logistics. All Rights Reserved.
+				© 2015 Inter Custom Logistics. All Rights Reserved.
 			</p>
 		</div>
 	</div>
