--- a/logistics/customsbrokerage.html
+++ b/logistics/customsbrokerage.html
@@ -17,7 +17,7 @@
 				<li>
 					<a href="index.html">Home</a>
 				</li>
-			  <li>
+				<li>
 					<a href="about.html">About</a>
 				</li>
 				<li class="selected">
@@ -30,24 +30,26 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<div id="about" class="area">
-			<a href="quote.html">
-				<div id="about" class="area">
-				<div class="quote">
-					<h2>Get Free Quote</h2>
-				</div>
-			</a>
+		<a href="quote.html">
+			<div id="about" class="area">
+				<a href="quote.html">
+					<div id="about" class="area">
+					<div class="quote">
+						<h2>Get Free Quote</h2>
+					</div>
+				</a>
+		</a>
 			<div class="section">
 				<div class="box">
 					<div>
 						<div>
-							<h3>Air Exports</h3>
-							<p>
-								Our customer service oriented Air Export department arranges complete domestic transportation services from anywhere within the USA to meet any and all scheduled airlines serving worldwide destinations.
+							<h3>Customs Brokerage</h3>
+							<p><br>
+								In conjuction with our broker network we provide timely and accurate clearance of merchandise through U.S. Customs. Our coverage includes all major points of entry throughout the U.S.A.
 								<br><br>
-								The quick and efficient delivery of cargo from the exporter’s door to the airport of departure is critical to your success, and it is one of our strengths.
+								Our staff of professionals has the knowledge and experience to classify and process your shipments quickly and accurately.
 								<br><br>
-								Our agent network and their knowledge of the import requirements at international destinations enables us to avoid the problems and delays that plague many "hot" air export shipments.
+								Our electronic link with U.S. Customs enables us to expedite the clearance process and the delivery of your cargo.
 							</p>
 						</div>
 					</div>
@@ -59,16 +61,14 @@
 						<div>
 							<h3>Services</h3>
 								<ul style="list-style-type:disc">
-									<li>Coordination of USA inland freight </li>
-	                <li>Multiple supplier consolidations</li>
-	                <li>Packaging/Crating </li>
-	                <li>Experienced handling of restricted articles</li>
-	                <li>Letter of Credit processing </li>
-	                <li>Complete documentation </li>
-	                <li>Air Freight Options</li>
-		              <li>Direct vs. consolidated</li>
-                	<li>Speed vs. economy</li>
-	                <li>Insurance <br>
+									<li> Product Sourcing
+	                  </li>
+	                <li>Classification Review</li>
+	                <li>P.O. Monitoring</li>
+	                <li>Cargo Pre-Clearance</li>
+	                <li>24/7 Service</li>
+	                <li> Customs Clearance 24/7</li>
+	                <li>Duty Drawback</li>
 								</ul>
 						</div>
 					</div>
@@ -77,7 +77,6 @@
 		</div>
 	</div>
 	<div id="footer">
-		<span class="divider"></span>
 		<div class="area">
 			<div id="connect">
 				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
