--- a/logistics/oceanimports.html
+++ b/logistics/oceanimports.html
@@ -17,7 +17,7 @@
 				<li>
 					<a href="index.html">Home</a>
 				</li>
-			  <li>
+				<li>
 					<a href="about.html">About</a>
 				</li>
 				<li class="selected">
@@ -30,24 +30,26 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<div id="about" class="area">
-			<a href="quote.html">
-				<div id="about" class="area">
-				<div class="quote">
-					<h2>Get Free Quote</h2>
-				</div>
-			</a>
+		<a href="quote.html">
+			<div id="about" class="area">
+				<a href="quote.html">
+					<div id="about" class="area">
+					<div class="quote">
+						<h2>Get Free Quote</h2>
+					</div>
+				</a>
+		</a>
 			<div class="section">
 				<div class="box">
 					<div>
 						<div>
-							<h3>Air Exports</h3>
-							<p>
-								Our customer service oriented Air Export department arranges complete domestic transportation services from anywhere within the USA to meet any and all scheduled airlines serving worldwide destinations.
+							<h3>Ocean Imports</h3>
+							<p><br>
+								Ocean import remains the keystone of our company. The comprehensive coordination of regular supply chain logistics and economic transportation allows our clients to receive service tailor-made to meet their needs and requirements.
 								<br><br>
-								The quick and efficient delivery of cargo from the exporter’s door to the airport of departure is critical to your success, and it is one of our strengths.
+								Whether we provide a multiple vendor consolidation service or a single shipper/consignee service, each shipment is handled with the high quality professionalism which is our standard.
 								<br><br>
-								Our agent network and their knowledge of the import requirements at international destinations enables us to avoid the problems and delays that plague many "hot" air export shipments.
+								Working with our clients, overseas partners/affiliates, we combine volumes to obtain the most competitive ocean rate contracts, which benefit all parties concerned.
 							</p>
 						</div>
 					</div>
@@ -59,16 +61,16 @@
 						<div>
 							<h3>Services</h3>
 								<ul style="list-style-type:disc">
-									<li>Coordination of USA inland freight </li>
-	                <li>Multiple supplier consolidations</li>
-	                <li>Packaging/Crating </li>
-	                <li>Experienced handling of restricted articles</li>
-	                <li>Letter of Credit processing </li>
-	                <li>Complete documentation </li>
-	                <li>Air Freight Options</li>
-		              <li>Direct vs. consolidated</li>
-                	<li>Speed vs. economy</li>
-	                <li>Insurance <br>
+									<li>Product Sourcing</li>
+	                <li>Buyer’s Consolidation</li>
+	                <li>Weekly Consolidations from Asia/Europe</li>
+	                <li>Ocean Transportation Options</li>
+	                <li>IFS Tracker</li>
+	                <li>Customs Clearance 24/7</li>
+									<li>Marine Insurance</li>
+									<li>Domestic Distribution/Delivery</li>
+									<li>Landed Cost Reports</li>
+									<li>Specialized Reporting</li>
 								</ul>
 						</div>
 					</div>
@@ -77,7 +79,6 @@
 		</div>
 	</div>
 	<div id="footer">
-		<span class="divider"></span>
 		<div class="area">
 			<div id="connect">
 				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
