--- a/logistics/services.html
+++ b/logistics/services.html
@@ -90,13 +90,12 @@
 		</div>
 	</div>
 	<div id="footer">
-		<span class="divider"></span>
 		<div class="area">
 			<div id="connect">
 				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
 			</div>
 			<p>
-				© 2023 AZ Logistics. All Rights Reserved.
+				© 2015 Inter Custom Logistics. All Rights Reserved.
 			</p>
 		</div>
 	</div>
