--- a/logistics/contact.html
+++ b/logistics/contact.html
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 			<div>
-				<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="510" height="383" src="https://maps.google.com/maps?hl=en&q=6815 NW 84th Ave 33166&ie=UTF8&t=roadmap&z=13&iwloc=B&output=embed">
+				<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="510" height="435" src="https://maps.google.com/maps?hl=en&q=6815 NW 84th Ave 33166&ie=UTF8&t=roadmap&z=13&iwloc=B&output=embed">
 					<div><small>
 						<a href="http://embedgooglemaps.com">embedgooglemaps.com</a></small>
 					</div>
@@ -67,13 +67,12 @@
 		</div>
 	</div>
 	<div id="footer">
-		<span class="divider"></span>
 		<div class="area">
 			<div id="connect">
 				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
 			</div>
 			<p>
-				© 2023 AZ Logistics. All Rights Reserved.
+				© 2015 Inter Custom Logistics. All Rights Reserved.
 			</p>
 		</div>
 	</div>
