--- a/logistics/index.html
+++ b/logistics/index.html
@@ -118,14 +118,13 @@
 			</div>
 		</div>
 	</div>
-	<div id="footer">
-		<span class="divider"></span>
+	<div id="index-footer">
 		<div class="area">
 			<div id="connect">
 				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
 			</div>
 			<p>
-				© 2023 AZ Logistics. All Rights Reserved.
+				© 2015 Inter Custom Logistics. All Rights Reserved.
 			</p>
 		</div>
 	</div>
