--- a/logistics/oceanexports.html
+++ b/logistics/oceanexports.html
@@ -17,7 +17,7 @@
 				<li>
 					<a href="index.html">Home</a>
 				</li>
-			  <li>
+				<li>
 					<a href="about.html">About</a>
 				</li>
 				<li class="selected">
@@ -30,24 +30,26 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<div id="about" class="area">
-			<a href="quote.html">
-				<div id="about" class="area">
-				<div class="quote">
-					<h2>Get Free Quote</h2>
-				</div>
-			</a>
+		<a href="quote.html">
+			<div id="about" class="area">
+				<a href="quote.html">
+					<div id="about" class="area">
+					<div class="quote">
+						<h2>Get Free Quote</h2>
+					</div>
+				</a>
+		</a>
 			<div class="section">
 				<div class="box">
 					<div>
 						<div>
-							<h3>Air Exports</h3>
-							<p>
-								Our customer service oriented Air Export department arranges complete domestic transportation services from anywhere within the USA to meet any and all scheduled airlines serving worldwide destinations.
+							<h3>Ocean Exports</h3>
+							<p><br>
+								We provide complete logistic and documentary services for a wide range of commodities moving as LCL, container, or break-bulk from the USA to any port worldwide.
 								<br><br>
-								The quick and efficient delivery of cargo from the exporter’s door to the airport of departure is critical to your success, and it is one of our strengths.
+								Our state-of-the-art software along with our experienced personnel, allows us to negotiate rates, route cargo, arrange transportation, and complete all documentation in order to ship cargo quickly and economically. Upon arrival at destination, the documents are waiting / avoiding delays. Our destination partners are always ready, willing, and able to assist when needed / required.
 								<br><br>
-								Our agent network and their knowledge of the import requirements at international destinations enables us to avoid the problems and delays that plague many "hot" air export shipments.
+								Based on our years of experience in a very competitive marketplace, we are able to offer a full package of services to ship/sell your products worldwide.
 							</p>
 						</div>
 					</div>
@@ -59,16 +61,18 @@
 						<div>
 							<h3>Services</h3>
 								<ul style="list-style-type:disc">
-									<li>Coordination of USA inland freight </li>
-	                <li>Multiple supplier consolidations</li>
-	                <li>Packaging/Crating </li>
-	                <li>Experienced handling of restricted articles</li>
-	                <li>Letter of Credit processing </li>
-	                <li>Complete documentation </li>
-	                <li>Air Freight Options</li>
-		              <li>Direct vs. consolidated</li>
-                	<li>Speed vs. economy</li>
-	                <li>Insurance <br>
+									<li>Coordination of USA Inland Freight</li>
+	                <li>Multiple Supplier Consolidation</li>
+	                <li>Complete Export Documentation</li>
+	                <li>Letter of Credit Processing</li>
+	                <li>Haz/Mat Certified </li>
+	                <li>Packing/Crating/Container Loading</li>
+	                <li>Project Cargo Coordination</li>
+									<li>Marine Insurance</li>
+									<li>Consular Document Legalization </li>
+									<li>Ocean Freight Options </li>
+									<li>Direct vs. Trans Shipment </li>
+									<li>Speed vs. Economy </li>
 								</ul>
 						</div>
 					</div>
@@ -77,7 +81,6 @@
 		</div>
 	</div>
 	<div id="footer">
-		<span class="divider"></span>
 		<div class="area">
 			<div id="connect">
 				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
