--- a/logistics/contact.html
+++ b/logistics/contact.html
@@ -3,12 +3,12 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics</title>
+	<title>Inter Custom Logistics-Miami Freight Forwarding Contact Us</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
 	<div id="header">
-		<div class="area">
+		<div class="area-header">
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
 			</div>
@@ -32,9 +32,11 @@
 	</div>
 	<div id="contents" style="min-height: 490px;">
 		<div id="about" class="area" style="width: 990px;">
-			<div class="quote">
-				<h2>Get Free Quote</h2>
-			</div>
+			<a href="quote.html">
+				<div class="quote">
+					<h2>Get Your Free Quote</h2>
+				</div>
+			</a>
 			<div class="section">
 				<div class="box">
 					<div>
