--- a/logistics/thanks.html
+++ b/logistics/thanks.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics-Miami Freight Forwarding Customs Brokerage</title>
+	<title>Inter Custom Logistics-Miami Freight Forwarding Thanks</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
@@ -17,10 +17,10 @@
 				<li>
 					<a href="index.html">Home</a>
 				</li>
-				<li>
+				<li class="selected">
 					<a href="about.html">About</a>
 				</li>
-				<li class="selected">
+				<li>
 					<a href="services.html">Services</a>
 				</li>
 				<li>
@@ -30,46 +30,22 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<a href="quote.html">
-			<div id="about" class="area">
-				<a href="quote.html">
-					<div id="about" class="area">
-					<div class="quote">
+	   <div id="about" class="area">
+       <a href="quote.html">
+			   <div class="quote">
 					<h2>Get Your Free Quote</h2>
-					</div>
-				</a>
-		</a>
+			       </div>
+		   </a>
 			<div class="section">
 				<div class="box">
 					<div>
 						<div>
-							<h3>Customs Brokerage</h3>
-							<p><br>
-								In conjuction with our broker network we provide timely and accurate clearance of merchandise through U.S. Customs. Our coverage includes all major points of entry throughout the U.S.A.
-								<br><br>
-								Our staff of professionals has the knowledge and experience to classify and process your shipments quickly and accurately.
-								<br><br>
-								Our electronic link with U.S. Customs enables us to expedite the clearance process and the delivery of your cargo.
+							<h3>Thank You!</h3>
+							<p>
+                We are pleased to offer you a quotation for your global logistics needs.
+			          <br>
+			          We'll be in touch with you shortly.
 							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="section">
-				<div class="box">
-					<div>
-						<div>
-							<h3>Services</h3>
-								<ul style="list-style-type:disc">
-									<li> Product Sourcing
-	                  </li>
-	                <li>Classification Review</li>
-	                <li>P.O. Monitoring</li>
-	                <li>Cargo Pre-Clearance</li>
-	                <li>24/7 Service</li>
-	                <li> Customs Clearance 24/7</li>
-	                <li>Duty Drawback</li>
-								</ul>
 						</div>
 					</div>
 				</div>
