--- a/logistics/about.html
+++ b/logistics/about.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics</title>
+	<title>Inter Custom Logistics-Miami Freight Forwarding About US</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
 	<div id="header">
-		<div class="area">
+		<div class="area-header">
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
 			</div>
@@ -30,12 +30,12 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<a href="quote.html">
-			<div id="about" class="area">
-			<div class="quote">
-				<h2>Get Free Quote</h2>
-			</div>
-		</a>
+		<div id="about" class="area">
+			<a href="quote.html">
+				<div class="quote">
+					<h2>Get Your Free Quote</h2>
+				</div>
+			</a>
 			<div class="section">
 				<div class="box">
 					<div>
