--- a/logistics/airimports.html
+++ b/logistics/airimports.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics</title>
+	<title>Inter Custom Logistics-Miami Freight Forwarding Air Imports</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
 	<div id="header">
-		<div class="area">
+		<div class="area-header">
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
 			</div>
@@ -35,7 +35,7 @@
 				<a href="quote.html">
 					<div id="about" class="area">
 					<div class="quote">
-						<h2>Get Free Quote</h2>
+					<h2>Get Your Free Quote</h2>
 					</div>
 				</a>
 		</a>
@@ -75,7 +75,6 @@
 		</div>
 	</div>
 	<div id="footer">
-		<span class="divider"></span>
 		<div class="area">
 			<div id="connect">
 				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
