--- a/logistics/index.html
+++ b/logistics/index.html
@@ -3,12 +3,12 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics</title>
+	<title>Inter Custom Logistics-Miami Freight Forwarding</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
 	<div id="header">
-		<div class="area">
+		<div class="area-header">
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO"/></a>
 			</div>
@@ -31,46 +31,30 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
+		<a href="quote.html">
+		<div class="area">
+			<div class="index-quote">
+				<h2>Get Your Free Quote</h2>
+			</div>
+		</div>
+		</a>
 		<div id="adbox">
 			<div class="area">
 			</div>
 		</div>
 		<div class="area">
-			<a href="quote.html">
-				<div class="area">
-				<div class="quote">
-					<h2>Get Free Quote</h2>
-				</div>
-			</a>
 			<div class="main">
 				<div id="adbox2">
-					<div class="area">
-						<ul>
-							<li>
-								<div>
-									<h2><span>LAND</span> TRANSPORT</h2>
-									<p>
-										This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>
-									</p>
-								</div>
-							</li>
-							<li>
-								<div>
-									<h2><span>Ocean</span> TRANSPORT</h2>
-									<p>
-										This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>
-									</p>
-								</div>
-							</li>
-							<li>
-								<div>
-									<h2><span>Air</span> TRANSPORT</h2>
-									<p>
-										This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>
-									</p>
-								</div>
-							</li>
-						</ul>
+				</div>
+				<div class="area-transport">
+					<div class="transport">
+						<h2><a href="customsbrokerage.html"><span>LAND</span> TRANSPORT</h2></a>
+					</div>
+					<div class="transport">
+						<h2><a href="oceanexports.html"><span>Ocean</span> TRANSPORT</h2></a>
+					</div>
+					<div class="transport">
+						<h2><a href="airexports.html"><span>Air</span> TRANSPORT</h2></a>
 					</div>
 				</div>
 				<div id="features">
@@ -78,30 +62,30 @@
 					<ul>
 						<li>
 							<img src="images/agents.png" alt="Img" height="100" width="100"/>
-							<h3>Easy Transactions</h3>
+							<h3>Fully Certified</h3> <!-- better word than transactions -->
 							<p>
-								This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free.
+								Licensed domestic and international Freight Forwarder.
 							</p>
 						</li>
 						<li>
 							<img src="images/shopping.png" alt="Img" height="100" width="100" />
-							<h3>Hassle Free</h3>
+							<h3>Insurance/Security</h3>
 							<p>
-								This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free.
+								Your cargo is fully insured. Our premicses contain top of the line 24/7 security.
 							</p>
 						</li>
 						<li>
 							<img src="images/smiling.png" alt="Img" height="100" width="100" />
 							<h3>Mobile Tracking</h3>
 							<p>
-								This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free.
+								Track your shipments on any smart phone or browser.
 							</p>
 						</li>
 						<li>
 							<img src="images/buildings.png" alt="Img" height="100" width="100" />
-							<h3>World Wide Office</h3>
+							<h3>Professional Service</h3>
 							<p>
-								This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free.
+								Experienced and relaible staff.
 							</p>
 						</li>
 					</ul>
@@ -113,8 +97,7 @@
 				</div>
 				<h3>We Aim Higher</h3>
 				<p>
-					This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forum</a>.
-				</p>
+					Based in Miami, Florida, Inter Custom Logistics has the solution to any of your freight forwarding needs.
 			</div>
 		</div>
 	</div>
