--- a/logistics/quote.html
+++ b/logistics/quote.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics</title>
+	<title>Inter Custom Logistics-Miami Freight Forwarding Get Free Quote</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
   <script type="text/JavaScript">
   function MM_preloadImages() { //v3.0
@@ -36,7 +36,7 @@
 </head>
 <body>
 	<div id="header">
-		<div class="area">
+		<div class="area-header">
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
 			</div>
@@ -62,7 +62,7 @@
 		<a href="quote.html">
 			<div id="about" class="area">
 			<div class="quote">
-				<h2>Get Free Quote</h2>
+					<h2>Get Your Free Quote</h2>
 			</div>
 		</a>
 			<div class="section">
@@ -200,12 +200,13 @@
               </td>
              </tr>
            </table>
+           </form>
 		     </div>
 				</div>
 			</div>
 		</div>
 	</div>
-<div id="index-footer">
+<div id="quote-footer">
 	<div class="area">
 		<div id="connect">
 			<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
