--- a/logistics/services.html
+++ b/logistics/services.html
@@ -3,12 +3,12 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics</title>
+	<title>Inter Custom Logistics-Miami Freight Forwarding Services</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
 	<div id="header">
-		<div class="area">
+		<div class="area-header">
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO"/></a>
 			</div>
@@ -33,9 +33,8 @@
 	<div id="contents" style="min-height: 490px;">
 		<div id="about" class="area">
 			<a href="quote.html">
-				<div id="about" class="area">
 				<div class="quote">
-					<h2>Get Free Quote</h2>
+					<h2>Get Your Free Quote</h2>
 				</div>
 			</a>
 			<div class="main">			<!-- or class="section" -->
