--- a/logistics/customsbrokerage.html
+++ b/logistics/customsbrokerage.html
@@ -74,6 +74,12 @@
 					</div>
 				</div>
 			</div>
+			<button onclick="goBack()" class="btn">Go Back</button>
+			<script>
+			function goBack() {
+					window.history.back();
+			}
+			</script>
 		</div>
 	</div>
 	<div id="footer">
