--- a/logistics/index.html
+++ b/logistics/index.html
@@ -48,7 +48,7 @@
 				</div>
 				<div class="area-transport">
 					<div class="transport">
-						<h2><a href="customsbrokerage.html"><span>LAND</span> TRANSPORT</h2></a>
+						<h2><a href="landtransportation.html"><span>LAND</span> TRANSPORT</h2></a>
 					</div>
 					<div class="transport">
 						<h2><a href="oceanexports.html"><span>Ocean</span> TRANSPORT</h2></a>
@@ -62,9 +62,9 @@
 					<ul>
 						<li>
 							<img src="images/agents.png" alt="Img" height="100" width="100"/>
-							<h3>Fully Certified</h3> <!-- better word than transactions -->
+							<h3>Fully Licensed</h3> <!-- better word than transactions -->
 							<p>
-								Licensed domestic and international Freight Forwarder.
+								Domestic and international Freight Forwarder. NVOCC and IATA certified.
 							</p>
 						</li>
 						<li>
