--- a/logistics/landtransportation.html
+++ b/logistics/landtransportation.html
@@ -41,13 +41,11 @@
 				<div class="box">
 					<div>
 						<div>
-							<h3>Air Exports</h3>
-							<p>
-								Our customer service oriented Air Export department arranges complete domestic transportation services from anywhere within the USA to meet any and all scheduled airlines serving worldwide destinations.
+							<h3>Land Transportation</h3>
+							<p><br>
+								At ICL, we aim to provide you “All the Right Moves” by offering the most efficient and cost effective modes of transport regardless of shipment type or location.
 								<br><br>
-								The quick and efficient delivery of cargo from the exporter’s door to the airport of departure is critical to your success, and it is one of our strengths.
-								<br><br>
-								Our agent network and their knowledge of the import requirements at international destinations enables us to avoid the problems and delays that plague many "hot" air export shipments.
+								In some regions ICL operates its own trucking services, or ICL works with trusted inland transportation partners and other service providers to provide a full range of ground transport options that move your cargo – where you need it when you need it.
 							</p>
 						</div>
 					</div>
@@ -59,16 +57,12 @@
 						<div>
 							<h3>Services</h3>
 								<ul style="list-style-type:disc">
-									<li>Coordination of USA inland freight </li>
-	                <li>Multiple supplier consolidations</li>
-	                <li>Packaging/Crating </li>
-	                <li>Experienced handling of restricted articles</li>
-	                <li>Letter of Credit processing </li>
-	                <li>Complete documentation </li>
-	                <li>Air Freight Options</li>
-		              <li>Direct vs. consolidated</li>
-                	<li>Speed vs. economy</li>
-	                <li>Insurance <br>
+									<li>Multimodal transport options</li>
+	                <li>Full and less than truck load transportation</li>
+	                <li>Flatbed and Flatrack</li>
+	                <li>Temperature controlled transportation</li>
+	                <li>White glove deliveries</li>
+	                <li>Freight monitoring</li>
 								</ul>
 						</div>
 					</div>
