--- a/logistics/services.html
+++ b/logistics/services.html
@@ -68,7 +68,7 @@
 							</table>
 							<table>
 								<tr>
-									<td style="padding-right: 26px;padding-left: 63px;">
+									<td>
 										<a href="oceanexports.html">
 											<img src="images/ocean.jpg" alt="Img" height="120" width="120" />
 										</a>
@@ -79,6 +79,12 @@
 											<img src="images/ocean2.jpg" alt="Img" height="120" width="120" />
 										</a>
 										<h4><a href="oceanimports.html">Ocean Imports</a></h4>
+									</td>
+									<td>
+										<a href="landtransportation.html">
+											<img src="images/truck.png" alt="Img" height="120" width="120" />
+										</a>
+										<h4><a href="landtransportation.html" style="font-size: 15px;">Land Transportation</a></h4>
 									</td>
 								</tr>
 							</table>
