--- a/logistics/customsbrokerage.html
+++ b/logistics/customsbrokerage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics-Miami Freight Forwarding Customs Brokerage</title>
+	<title>Professional Customs Brokerage, Inter Custom Logistics-Miami Freight Forwarding</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
 			</div>
-			<div id="logo-text">INTER CUSTOMS LOGISTICS
+			<div id="logo-text"><a href="index.html">INTER CUSTOMS LOGISTICS</a>
 			</div>
 			<ul id="navigation">
 				<li>
@@ -30,15 +30,12 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<a href="quote.html">
-			<div id="about" class="area">
+			<div id="about" class="area-quote">
 				<a href="quote.html">
-					<div id="about" class="area">
 					<div class="quote">
-					<h2>Get Your Free Quote</h2>
+						<h2>Get Your Free Quote</h2>
 					</div>
 				</a>
-		</a>
 			<div class="section">
 				<div class="box">
 					<div>
@@ -85,7 +82,7 @@
 	<div id="footer">
 		<div class="area">
 			<div id="connect">
-				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
+				<a href="mailto:traffic@intercustom.com" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a>
 			</div>
 			<p>
 				© 2015 Inter Custom Logistics. All Rights Reserved.
