--- a/logistics/index.html
+++ b/logistics/index.html
@@ -12,7 +12,7 @@
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO"/></a>
 			</div>
-			<div id="logo-text">INTER CUSTOMS LOGISTICS
+			<div id="logo-text"><a href="index.html">INTER CUSTOMS LOGISTICS</a>
 			</div>
 			<ul id="navigation">
 				<li class="selected">
@@ -32,7 +32,7 @@
 	</div>
 	<div id="contents" style="min-height: 490px;">
 		<a href="quote.html">
-		<div class="area">
+		<div class="area-quote">
 			<div class="index-quote">
 				<h2>Get Your Free Quote</h2>
 			</div>
@@ -55,6 +55,9 @@
 					</div>
 					<div class="transport">
 						<h2><a href="airexports.html"><span>Air</span> TRANSPORT</h2></a>
+					</div>
+					<div class="transport">
+						<h2><a href="resources.html"><span>TOOLS &</span> RESOURCES</h2></a>
 					</div>
 				</div>
 				<div id="features">
@@ -104,7 +107,7 @@
 	<div id="index-footer">
 		<div class="area">
 			<div id="connect">
-				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
+				<a href="mailto:traffic@intercustom.com" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a>
 			</div>
 			<p>
 				© 2015 Inter Custom Logistics. All Rights Reserved.
