--- a/logistics/about.html
+++ b/logistics/about.html
@@ -11,7 +11,7 @@
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
 			</div>
-			<div id="logo-text">INTER CUSTOMS LOGISTICS
+			<div id="logo-text"><a href="index.html">INTER CUSTOMS LOGISTICS</a>
 			</div>
 			<ul id="navigation">
 				<li>
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<div id="about" class="area">
+		<div id="about" class="area-quote">
 			<a href="quote.html">
 				<div class="quote">
 					<h2>Get Your Free Quote</h2>
@@ -66,12 +66,11 @@
 								Gladys Pardo<br>
 								General Manager<br>
 								<p>
-
-								Gladys Pardo is General Manager of Inter Customs Logistics, LLC. – Miami, Florida has over 20 years of experience in the international transportation industry. She has a degree in accounting from Miami Dade Community College.
-								In 1986 Gladys joined Overcom Trade, Inc. where she earned her first job experience in the shipping industry. Her areas of expertise included freight forwarding, purchasing, air, ocean, import and export freight forwarding. Then in 1993 Gladys joined Customs And Trade Services, Inc in Miami as an Account Executive handling import and export consolidations, and promoted to Export Manager in 2001.
-
-								In February 2007, Gladys created this new Miami Company to offer clients and agent/partners the same dedicated service that she has provided since 1986 to the transportation industry.
-							</p>
+									Gladys Pardo is General Manager of Inter Customs Logistics, LLC. – Miami, Florida has over 20 years of experience in the international transportation industry. She has a degree in accounting from Miami Dade Community College.
+									In 1986 Gladys joined Overcom Trade, Inc. where she earned her first job experience in the shipping industry. Her areas of expertise included freight forwarding, purchasing, air, ocean, import and export freight forwarding. Then in 1993 Gladys joined Customs And Trade Services, Inc in Miami as an Account Executive handling import and export consolidations, and promoted to Export Manager in 2001.
+									<br><br>
+									In February 2007, Gladys created this new Miami Company to offer clients and agent/partners the same dedicated service that she has provided since 1986 to the transportation industry.
+								</p>
 							</p>
 						</div>
 					</div>
@@ -82,7 +81,7 @@
 	<div id="footer">
 		<div class="area">
 			<div id="connect">
-				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
+				<a href="mailto:traffic@intercustom.com" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a>
 			</div>
 			<p>
 				© 2015 Inter Custom Logistics. All Rights Reserved.
