--- a/logistics/contact.html
+++ b/logistics/contact.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics-Miami Freight Forwarding Contact Us</title>
+	<title>Contact Us At Inter Custom Logistics-Miami Freight Forwarding</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
 			</div>
-			<div id="logo-text">INTER CUSTOMS LOGISTICS
+			<div id="logo-text"><a href="index.html">INTER CUSTOMS LOGISTICS</a>
 			</div>
 			<ul id="navigation">
 				<li>
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 	<div id="contents" style="min-height: 490px;">
-		<div id="about" class="area" style="width: 990px;">
+		<div id="about" class="area-quote" style="width: 990px;">
 			<a href="quote.html">
 				<div class="quote">
 					<h2>Get Your Free Quote</h2>
@@ -71,7 +71,7 @@
 	<div id="footer">
 		<div class="area">
 			<div id="connect">
-				<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
+				<a href="mailto:traffic@intercustom.com" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a>
 			</div>
 			<p>
 				© 2015 Inter Custom Logistics. All Rights Reserved.
