--- a/logistics/quote.html
+++ b/logistics/quote.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Inter Custom Logistics-Miami Freight Forwarding Get Free Quote</title>
+	<title>Get Your Free Freight Forwarding Quote From Inter Custom Logistics-Miami</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" />
   <script type="text/JavaScript">
   function MM_preloadImages() { //v3.0
@@ -40,7 +40,7 @@
 			<div id="logo">
 				<a href="index.html"><img src="images/logo-border.png" alt="LOGO" height="86" width="170" /></a>
 			</div>
-			<div id="logo-text">INTER CUSTOMS LOGISTICS
+			<div id="logo-text"><a href="index.html">INTER CUSTOMS LOGISTICS</a>
 			</div>
 			<ul id="navigation">
 				<li>
@@ -60,7 +60,7 @@
 	</div>
 	<div id="contents" style="min-height: 490px;">
 		<a href="quote.html">
-			<div id="about" class="area">
+			<div id="about" class="area-quote">
 			<div class="quote">
 					<h2>Get Your Free Quote</h2>
 			</div>
@@ -209,7 +209,7 @@
 <div id="quote-footer">
 	<div class="area">
 		<div id="connect">
-			<a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a> <a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a> <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
+			<a href="mailto:traffic@intercustom.com" target="_blank" class="mail"></a> <a href="https://www.facebook.com/InterCustomLogistics?fref=ts" target="_blank" class="facebook"></a>
 		</div>
 		<p>
 			© 2015 Inter Custom Logistics. All Rights Reserved.
